<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/home_sel"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_myads"
            android:icon="@drawable/my_ad_sel"
            android:title="@string/title_my_ads"/>

    <item
            android:id="@+id/navigation_camera"
            android:icon="@drawable/wishlist_sel"
            android:title="@string/title_watchlist"/>

    <item
            android:id="@+id/navigation_messages"
            android:icon="@drawable/messages_sel"
            android:title="@string/title_messages"/>

    <item
            android:id="@+id/navigation_account"
            android:icon="@drawable/account_sel"
            android:title="@string/title_account"/>

</menu>
