<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <include layout="@layout/app_toolbar"
                 android:id="@+id/toolbarLayout"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"/>

        <ScrollView android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toolbarLayout"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_1">

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCreateAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        style="@style/large_bold"
                        android:textColor="@color/black_1"
                        android:text="@string/lbl_create_account"
                        app:layout_constraintTop_toTopOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvRegisterMsg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/small_reg"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textColor="@color/gray_3"
                        android:text="@string/lbl_register_msg"
                        app:layout_constraintTop_toBottomOf="@+id/tvCreateAccount"/>


                <com.souqbh.customview.CircleImageView
                        android:id="@+id/ivProfilePic"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        app:layout_constraintTop_toBottomOf="@+id/tvRegisterMsg"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:src="@drawable/upload_pic"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/small_medium"
                        android:text="@string/lbl_sign_up_with"
                        android:id="@+id/tvSignInLabel"
                        android:textColor="@color/gray_1"
                        app:layout_constraintTop_toBottomOf="@+id/ivProfilePic"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_10sdp"/>

                <View android:id="@+id/dividerView"
                      android:layout_width="match_parent"
                      android:layout_height="@dimen/_1sdp"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      android:layout_marginEnd="@dimen/_15sdp"
                      android:layout_marginStart="@dimen/_15sdp"
                      android:background="@color/gray_2"
                      app:layout_constraintTop_toBottomOf="@+id/tvSignInLabel"
                      android:layout_marginTop="@dimen/_7sdp"/>

                <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabs"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_3sdp"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginEnd="@dimen/_15sdp"
                        app:layout_constraintTop_toBottomOf="@+id/ivProfilePic"
                        app:tabSelectedTextColor="@color/red_1"
                        app:tabTextAppearance="@style/MyCustomTextAppearance"
                        app:tabTextColor="@color/black_1"
                        app:tabIndicatorColor="@color/red_1"
                        app:tabGravity="fill"
                        app:tabMode="fixed"/>

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Rounded_EditText"
                        android:imeOptions="actionNext"
                        android:hint="@string/hint_first_name"
                        android:inputType="textCapWords"
                        app:layout_constraintTop_toBottomOf="@+id/dividerView"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginTop="@dimen/_15sdp"/>

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Rounded_EditText"
                        android:imeOptions="actionNext"
                        android:hint="@string/hint_last_name"
                        android:inputType="textCapWords"
                        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginTop="@dimen/_15sdp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintInput"
                        android:layout_width="match_parent"
                        app:layout_constraintTop_toBottomOf="@+id/etLastName"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:background="@drawable/rounded_gray_solid_strock"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvCountryCode"
                            android:layout_width="@dimen/_60sdp"
                            android:layout_height="@dimen/_30sdp"
                            style="@style/small_reg"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:visibility="gone"
                            android:drawableEnd="@drawable/ic_arrow_down"
                            android:gravity="center"
                            android:animateLayoutChanges="true"
                            android:drawablePadding="@dimen/small_padding"
                            android:text="@string/lbl_default_country_code"
                            android:textColor="@color/gray_3"
                            android:layout_marginStart="@dimen/_10sdp"/>

                    <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etPhoneEmail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            style="@style/Rounded_EditText"
                            android:layout_marginEnd="@dimen/_15sdp"
                            android:background="@null"
                            android:inputType="textEmailAddress"
                            android:imeOptions="actionDone"
                            android:hint="@string/hint_email_address"
                            android:layout_marginStart="0dp"
                            app:layout_constraintStart_toEndOf="@+id/tvCountryCode"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btnAgreeAndSignUp"
                        app:layout_constraintTop_toBottomOf="@+id/constraintInput"
                        style="@style/Rounded_Red_Button"
                        android:text="@string/btn_agree_sign_up"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvTermsAndCondition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/small_reg"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textColor="@color/gray_3"
                        android:gravity="center"
                        android:text="@string/lbl_terms_condition_msg"
                        app:layout_constraintTop_toBottomOf="@+id/btnAgreeAndSignUp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>